--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebRoot/WEB-INF/bookBorrowed.jsp=UTF-8
+encoding//WebRoot/WEB-INF/fail.jsp=UTF-8
 encoding//WebRoot/WEB-INF/s-main.jsp=UTF-8
